# spire_tween_gdscript

./: .gitignore  01-2025-11-04_10.49.49.mkv  01-2025-11-04_10.55.06.mpg  Cargo.toml  LICENSE  README.md  benchmark.sh  pending_support  tweenable_properties.json  tweenable_properties_schema.json
gdscript_bindgen/: Cargo.toml
gdscript_bindgen/src/: classes_gdscript_bridge.rs  classes_property_data.rs  json_to_data.rs  main.rs  old_code  tween_ty.rs  types_property_data.rs
spire_tween/: Cargo.toml
spire_tween/src/: benchmarking.rs  connection.rs  cow_fn.rs  ease.rs  id.rs  lib.rs  modes.rs  object_or_node.rs  shared_ptr.rs  singleton.rs  tweens_map.rs  util.rs
spire_tween/src/enums/: docs.rs  ease.rs  evaluator.rs  flags.rs  loop_mode.rs  macros.rs  mod.rs  pause_mode.rs  process_mode.rs  state.rs
spire_tween/src/gdscript_bridge/: do_call.rs  do_delayed_call.rs  do_property.rs  mod.rs  sequence.rs
spire_tween/src/global/: cfg.rs  dash_map_impl.rs  deferred_op.rs  index_map_impl.rs  mod.rs  node_status.rs
spire_tween/src/rc_ptr/: mod.rs  strong.rs  weak.rs
spire_tween/src/tweens/: any_tween.rs  bound_tweens.rs  cfg.rs  handle_enum.rs  lerping.rs  macros.rs  mod.rs  traits.rs  tweenables.rs
spire_tween/src/tweens/base/: builder.rs  gd.rs  handle_impl.rs  mod.rs  spire_tween.rs
spire_tween/src/tweens/delayed_call/: data.rs  do_delayed_call.rs  gd.rs  mod.rs
spire_tween/src/tweens/handle/: mod.rs  untyped.rs
spire_tween/src/tweens/lerping/: lerp_mode.rs  lerpable.rs  mod.rs  move_towards.rs  spire_lerp.rs
spire_tween/src/tweens/method/: data.rs  data_enum.rs  do_method.rs  gd.rs  handle_impl.rs  macros.rs  mod.rs
spire_tween/src/tweens/property/: data.rs  data_enum.rs  do_follow.rs  do_property.rs  generated_types_data.rs  handle_impl.rs  macros.rs  mod.rs  traits.rs
spire_tween/src/tweens/property/data_impls/: color.rs  custom.rs  f32.rs  float.rs  i32.rs  int.rs  mod.rs  string.rs  vector2.rs  vector2i.rs  vector3.rs  vector3i.rs
spire_tween/src/tweens/property/generated_classes_data/: accept_dialog.rs  animated_sprite_2_d.rs  animated_sprite_3_d.rs  animation_player.rs  area_2_d.rs  area_3_d.rs  aspect_ratio_container.rs  audio_stream_player.rs  audio_stream_player_2_d.rs  audio_stream_player_3_d.rs  button.rs  camera_2_d.rs  camera_3_d.rs  canvas_item.rs  canvas_layer.rs  canvas_modulate.rs  character_body_2_d.rs  character_body_3_d.rs  color_rect.rs  cone_twist_joint_3_d.rs  confirmation_dialog.rs  control.rs  decal.rs  fog_volume.rs  geometry_instance_3_d.rs  gpu_particles_attractor_3_d.rs  gpu_particles_attractor_box_3_d.rs  gpu_particles_attractor_sphere_3_d.rs  gpu_particles_attractor_vector_field_3_d.rs  label.rs  label_3_d.rs  light_3_d.rs  line_edit.rs  link_button.rs  node_2_d.rs  node_3_d.rs  omni_light_3_d.rs  parallax_background.rs  path_follow_2_d.rs  path_follow_3_d.rs  (+19 more)
spire_tween/src/tweens/property/named_datas/: color_data.rs  custom_data.rs  custom_methods.rs  do_property.rs  f32_data.rs  f64_data.rs  gstring_data.rs  i32_data.rs  i64_data.rs  macros.rs  mod.rs  vector2_data.rs  vector3_data.rs
spire_tween/src/tweens/property/named_datas/classes/: audio_stream_player.rs  camera.rs  canvas_item.rs  canvas_layer.rs  canvas_modulate.rs  control.rs  mod.rs  node_2d.rs  (+4 more)
spire_tween/src/tweens/sequence/: data.rs  gd.rs  handle_impl.rs  mod.rs
spire_tween/src/tweens/tween_callable/: data.rs  gd.rs
spire_tween/src/tweens/tween_callable(unused)/: data.rs  gd.rs  mod.rs
(+150 files in other folders)
