[workspace]
default-members = ["spire_tween"]
members = ["gdscript_bindgen", "spire_tween"]
resolver = "3"

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
debug = "none"

[profile.dev]
debug-assertions = true
opt-level = 3
lto = false
debug = true

[profile.samply]
inherits = "release"
debug = true