[package]
name = "gdscript_bindgen"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
serde = { version = "1.0.225", features = ["derive", "std"] }
serde_json = "1.0.145"
syn = "2.0.106"
quote = "1.0.40"
proc-macro2 = "1.0.101"
convert_case = "0.8.0"
spire_enum = "0.7.0"
prettyplease = "0.2.37"
anyhow = "1.0.100"
const_format = { version = "0.2.34", features = ["fmt"] }