[package]
name = "spire_tween"
version = "0.6.0"
authors = ["Houtamelo"]
edition = "2024"
resolver = "3"
description = "A Slimy tweener library for Godot(4.4+), inspired on the design of DoTween(3rd party package for Unity)"
license = "MIT"
repository = "https://github.com/Houtamelo/spire_tween"
categories = ["game-development", "api-bindings"]
keywords = ["godot", "tweening", "animation", "gdextension", "spire"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = { git = "https://github.com/Houtamelo/dead_gds_have_rights", features = ["experimental-threads", "register-docs", "__trace"] }
keyframe = "1.1.1"
anyhow = "1.0"
spire_enum = "0.7.1"
scc = "3.0.2"
glam = "0.30.5"
replace_with = "0.1.6"
fnv = "1.0.7"
dashmap = "7.0.0-rc2"
ahash = "0.8.12"
derived-deref = "2.1.0"
smolset = "1.3.1"

[features]
double-precision = ["godot/double-precision"]