[package]
name = "spire_tween"
version = "1.0.0"
authors = ["Houtamelo"]
edition = "2024"
resolver = "3"
description = "A Slimy tweener library for Godot(4.4+), inspired on the design of DoTween."
license = "MIT"
repository = "https://github.com/Houtamelo/spire_tween"
categories = ["game-development", "api-bindings"]
keywords = ["godot", "tweening", "animation", "gdextension", "spire"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = { git = "https://github.com/Houtamelo/dead_gds_have_rights", features = ["experimental-wasm", "register-docs", "__trace", "api-custom"] }
keyframe = "1.1.1"
anyhow = "1.0"
spire_enum = "0.7.1"
glam = "0.30.5"
replace_with = "0.1.6"
dashmap = { version = "7.0.0-rc2", features = ["raw-api", "inline-more"], optional = true }
indexmap = { version = "2.12.0", optional = true }
ahash = "0.8.12"
fxhash = "0.2.1"
derived-deref = "2.1.0"
smallvec = "1.15.1"
smolset = { git = "https://github.com/Houtamelo/smolset" }
markdown = "1.0.0-alpha.23"
litrs = "0.4"

[features]
default = ["indexmap"]
double-precision = ["godot/double-precision"]
dashmap = ["dep:dashmap"]
indexmap = ["dep:indexmap"]
nothreads = ["godot/experimental-wasm-nothreads"]